cw3 complete repo, also cw2 fixes (too late for full marks sadly)